# Four_In_Row

./: .gitignore  CMakeLists.txt  Doxyfile  Main.c  README.md  annotated.html  annotated_dup.js  board.c  board.h  classes.html  constant.h  definitions_8h.html  definitions_8h.js  definitions_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  functions.html  functions_8c.html  functions_8c.js  functions_8h.html  functions_8h.js  functions_8h_source.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  index.html  loop_8c.html  loop_8c.js  loop_8h.html  loop_8h.js  loop_8h_source.html  navtreedata.js  navtreeindex0.js  setup.c  setup.h  structBoard.html  structBoard.js  (+11 more)
.github/workflows/: cmake-multi-platform.yml  doxygen-action.yml
app/: CMakeLists.txt  glad.c  main.c
libs/: CMakeLists.txt
libs/cGETOPT/: CMakeLists.txt  getopt.c  getopt.h
libs/glad/: glad.h
search/: all_0.js  all_1.js  all_2.js  all_5.js  all_8.js  all_a.js  classes_0.js  defines_0.js  defines_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
src/: CMakeLists.txt  definitions.h  functions.c  functions.h  loop.c  loop.h  utils.c
src/setup/: CMakeLists.txt  cmd.c  cmd.h  default.c  default.h  setup.c  setup.h
